<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    tools:context=".registerDetail">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_detail_textinputlayout_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_firstname"
        android:padding="15sp"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_detail_textinputedittext_firstname"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_detail_textinputlayout_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_lastname"
        android:padding="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_detail_textinputlayout_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_detail_textinputedittext_lastname"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_detail_textinputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_password"
        android:padding="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_detail_textinputlayout_lastname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_detail_textinputedittext_password"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_detail_textinputlayout_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_confirmpassword"
        android:padding="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_detail_textinputlayout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_detail_textinputedittext_confirmpassword"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_detail_textinputlayout_confirmpassword"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/back_blue"
        android:text="@string/text_register"
        android:id="@+id/register_detail_button_register"/>

</RelativeLayout>