<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMaintenanceBIll"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_centerInParent="true"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp">

        <LinearLayout
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_month"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/addmaintenancebill_spinner_monthspinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:entries="@array/month" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:hint="@string/hint_enteryear">

                <EditText
                    android:id="@+id/addmaintenancebill_edittext_enteryear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:hint="@string/hint_amount">

                <EditText
                    android:id="@+id/addmaintenancebill_edittext_enteramount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addmainbill_button_addnewbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70sp"
                android:padding="15sp"
                android:text="@string/text_addbill"/>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>