<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Rule"
    android:background="@color/sky">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="350sp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rule_textview_addrule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rule"
                android:textSize="30sp"
                android:layout_marginStart="135sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rule_textinputlayout_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/hint_rule"
                android:layout_below="@+id/rule_textview_addrule"
                android:padding="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rule_textinputedittext_description"
                    android:layout_width="match_parent"
                    android:layout_height="200sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/otp_verify_button_sendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rule_textinputlayout_description"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:backgroundTint="@color/back_blue"
                android:text="@string/btn_rule" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>