<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseBill"
    android:background="@color/sky">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cw"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="370sp"
                android:layout_centerInParent="true"
                android:layout_marginStart="30sp"
                android:layout_marginTop="300sp"
                android:background="@color/white"
                app:cardCornerRadius="15sp">


                <TextView
                    android:id="@+id/txtapartmentname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80sp"
                    android:padding="20sp"
                    android:text="@string/text_addexpense"
                    android:textColor="@color/black"
                    android:textSize="30sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtiptblnc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120sp"
                    android:padding="5sp">

                    <TextView
                        android:id="@+id/txttotalblnc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_month"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtiptblnc2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="140sp"
                    android:layout_marginTop="120sp"
                    android:padding="5sp">

                    <Spinner
                        android:id="@+id/addbill_spinner_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/month" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="155sp"
                    android:hint="@string/hint_title"
                    android:padding="5sp"
                    >

                    <EditText
                        android:id="@+id/addbill_edittext_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="230sp"
                    android:hint="@string/hint_amount"
                    android:padding="5sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addbill_edittext_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addbill_button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150sp"
                    android:layout_marginTop="310sp"
                    android:backgroundTint="@color/primary_back_blue"
                    android:text="add"
                    android:textSize="10sp" />


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>